--- a/paper/fw_cogsci.bib
+++ b/paper/fw_cogsci.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Rose Schneider at 2015-02-04 11:21:36 -0800 
+%% Created for Dan Yurovsky at 2015-02-04 12:16:11 -0800 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
